Convert to React + Gatsby (#5)
* Convert header

* Convert long cards

* Convert short cards

* Convert short cards

* Convert remaining information

* Fix styles

* Update meta information

* Fix styling

* Update handling of images

* Remove unnecessary files

* Fix styling

* Remove unnecessary files

* Complete React conversion

--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -1,4 +1,3 @@
-
 .card {
     background-color: $white;
     margin-top: 0.5rem;
@@ -34,6 +33,10 @@
 
     .demo-link + .repo-link {
         margin-left: 0.5vw;
+    }
+
+    .tag + .tag {
+        margin-left: 5px;
     }
 
     .tag {
