--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,5 +1,6 @@
+@import url("https://fonts.googleapis.com/css?family=Nunito&display=swap");
 body {
-  font-family: "Nunito", sans-serif;
+  font-family: 'Nunito', sans-serif;
   background-color: #F5F5F5;
   color: black;
   transition-property: background;
@@ -37,6 +38,7 @@ footer {
   padding-top: 2rem;
   padding-bottom: 1rem;
 }
+
 @media (max-width: 960px) {
   footer p {
     text-align: center;
@@ -45,20 +47,24 @@ footer {
     margin-top: 0.5rem;
   }
 }
+
 @media (min-width: 960px) {
   footer {
     grid-template-columns: 4fr 2fr;
   }
 }
+
 footer p a {
   border-bottom: none;
   color: #007bff;
 }
+
 footer .footer-links {
   float: right;
   display: flex;
   justify-content: space-evenly;
 }
+
 footer .footer-links .link-container a {
   border-bottom: none;
   line-height: unset;
@@ -73,30 +79,36 @@ footer .footer-links .link-container a {
     max-width: 540px;
   }
 }
+
 @media (min-width: 768px) {
   .container {
     max-width: 720px;
   }
 }
+
 @media (min-width: 992px) {
   .container {
     max-width: 960px;
   }
 }
+
 @media (min-width: 1200px) {
   .container {
     max-width: 1140px;
   }
 }
+
 .profile .image {
   max-height: 100px;
   max-width: 100px;
 }
+
 .profile .links-container {
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
 }
+
 .profile .links-container .link-container {
   display: flex;
   border: none;
@@ -107,11 +119,13 @@ footer .footer-links .link-container a {
   align-items: center;
   height: 100%;
 }
+
 .profile .links-container .link-container img {
   height: 20px;
   transition-property: filter;
   transition: 250ms ease-in-out;
 }
+
 @media (min-width: 960px) {
   .profile {
     padding-top: 1rem;
@@ -128,10 +142,12 @@ footer .footer-links .link-container a {
     display: none;
   }
 }
+
 .profile .about-me {
   margin: 0;
   margin-top: 1.5rem;
 }
+
 .profile .about-me p {
   font-size: 24px;
 }
@@ -156,17 +172,19 @@ footer .footer-links .link-container a {
   border-radius: 6px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   box-shadow: none;
-  transition: transform 0.2s;
+  transition: transform .2s;
   position: relative;
   transition-property: background, border;
   transition: background 250ms ease-in-out, border 250ms ease-in-out;
 }
+
 .card .image {
   display: block;
   margin: auto;
   margin-top: 1rem;
   max-height: 50vw;
 }
+
 .card .demo-link {
   transition: border 250ms ease-in-out;
   font-size: 18px;
@@ -174,15 +192,22 @@ footer .footer-links .link-container a {
   color: #5fc383;
   border-bottom: dashed 1px;
 }
+
 .card .repo-link {
   font-size: 18px;
   font-weight: 600;
   color: #68b0f1;
   border-bottom: dashed 1px;
 }
+
 .card .demo-link + .repo-link {
   margin-left: 0.5vw;
 }
+
+.card .tag + .tag {
+  margin-left: 5px;
+}
+
 .card .tag {
   font-weight: 400;
   font-size: 16px;
@@ -196,6 +221,7 @@ footer .footer-links .link-container a {
   transition-property: background;
   transition: background 250ms ease-in-out;
 }
+
 .card .tag a {
   display: block;
   height: 100%;
@@ -204,6 +230,7 @@ footer .footer-links .link-container a {
   color: white;
   border: none;
 }
+
 .card .tag:hover {
   background-color: #d5256c;
   transition: background-color 0.5s ease-out;
@@ -214,16 +241,20 @@ footer .footer-links .link-container a {
   color: white;
   border: 1px solid rgba(55, 55, 55, 0.9);
 }
+
 .card.dark .tag {
   background-color: red;
 }
+
 .card.dark .tag:hover {
   background-color: #a01300;
   transition: background-color 0.5s ease-out;
 }
+
 .card.dark .repo-link {
   color: #00ebeb;
 }
+
 .card.dark .demo-link {
   color: #3ff61d;
 }
@@ -234,11 +265,9 @@ footer .footer-links .link-container a {
     min-width: 936px;
     max-width: 960px;
   }
-
   #extracurriculars {
     margin-top: 3.25vh;
   }
-
   .single-column .card {
     display: grid;
     grid-auto-flow: column;
@@ -282,7 +311,9 @@ footer .footer-links .link-container a {
     height: 100%;
     font-size: 16px;
   }
-
+  .single-column .card + .card {
+    margin-top: 1.5%;
+  }
   .two-column {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -309,11 +340,11 @@ footer .footer-links .link-container a {
     position: absolute;
     font-size: 16px;
   }
-
   hr {
     height: 5px;
   }
 }
+
 .section-heading {
   font-family: Lato, arial, verdana, helvetica, sans-serif;
   margin-top: 1.5rem;
@@ -352,6 +383,7 @@ p a {
   color: black;
   border-bottom: dashed 1px;
 }
+
 p a.dark {
   color: white;
 }
@@ -392,5 +424,3 @@ p {
 li {
   font-size: 16px;
 }
-
-/*# sourceMappingURL=styles.css.map */
