Add experience and education

--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -94,3 +94,16 @@
         color: $light-green;
     }
 }
+
+.basic-card {
+    background-color: $white;
+    margin-top: 0.5rem;
+    padding: 1rem;
+    font-size: 14px;
+    border-radius: 6px;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    box-shadow: none;
+    transition: transform .2s;
+    position: relative;
+
+}
