--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -166,7 +166,6 @@ footer .footer-links .link-container a {
 
 .card {
   background-color: #fff;
-  margin-top: 0.25rem;
   padding: 1rem;
   font-size: 14px;
   border-radius: 6px;
@@ -261,7 +260,6 @@ footer .footer-links .link-container a {
 
 .basic-card {
   background-color: #fff;
-  margin-top: 0.25rem;
   padding: 1rem;
   font-size: 14px;
   border-radius: 6px;
@@ -323,13 +321,13 @@ footer .footer-links .link-container a {
     font-size: 16px;
   }
   .single-column .card + .card {
-    margin-top: 1.5%;
+    margin-top: 0.75rem;
   }
   .two-column {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    column-gap: 1%;
-    row-gap: 1%;
+    column-gap: 0.75rem;
+    row-gap: 0.75rem;
     grid-row: auto;
   }
   .two-column .card {
@@ -355,10 +353,15 @@ footer .footer-links .link-container a {
   }
 }
 
+.card + .card, .basic-card + .basic-card, .basic-card + .card, .card + .basic-card {
+  margin-top: 0.75rem;
+}
+
 .section-heading {
   font-family: Lato, arial, verdana, helvetica, sans-serif;
-  margin-top: 1.5rem;
   font-weight: 600;
+  margin-top: 2rem;
+  margin-bottom: 0.5rem;
 }
 
 a, p, h1, h2, h3, h4, h5, h6, li {
