--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -8,6 +8,18 @@
     transition: transform .2s;
     position: relative;
 
+    @media (max-width: $tablet-breakpoint) {
+        ul {
+            list-style-type: none;
+            margin-left: 0;
+            padding: 0;
+            
+            li + li {
+                margin-top: 0.5rem;
+            }
+        }
+    }
+
     .image {
         display: block;
         margin: auto;
@@ -15,24 +27,21 @@
         max-height: 50vw;
     }
 
-    .demo-link {
-        font-size: 18px;
+    .project-link {
+        font-size: 17px;
         font-weight: 600;
-        color: $green;
         border-bottom: dashed 1px;
 
         transition-property: color;
         transition: color 250ms ease-in-out;
     }
 
-    .repo-link {
-        font-size: 18px;
-        font-weight: 600;
-        color: $blue;
-        border-bottom: dashed 1px;
+    .demo-link {
+        color: $green;
+    }
 
-        transition-property: color;
-        transition: color 250ms ease-in-out;
+    .repo-link {
+        color: $blue;
     }
 
     .demo-link + .repo-link {
@@ -108,6 +117,19 @@
     box-shadow: none;
     transition: transform .2s;
     position: relative;
+
+    @media (max-width: $tablet-breakpoint) {
+        ul {
+            list-style-type: none;
+            margin-left: 0;
+            padding: 0;
+            
+            li + li {
+                margin-top: 0.5rem;
+            }
+        }
+    }
+
 }
 
 .basic-card.dark {
