Change light theme colour scheme

--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -2,7 +2,7 @@
     background-color: $white;
     padding: 1rem;
     box-shadow: 0 2px 4px 0 hsla(0, 0%, 0%, 0.2);
-    border-top: 2px solid $pink;
+    border-top: 2px solid #0275d8;
     transition: transform .2s;
     position: relative;
 
