--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,10 +5,10 @@ $white: #fff;
 $off-white: #F5F5F5;
 $dark-grey: #606060;
 $light-grey: #CDCDCD;
-$pink: #ea86ae;
+$pink: #dc635f;
 $dark-pink: #d5256c;
-$blue: #68b0f1;
-$green: #5fc383;
+$blue: #5bc0de;
+$green: #5cb85c;
 
 // Dark theme
 $light-black: #242424;
