Fix colour scheme

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,7 +6,7 @@ $off-white: #F5F5F5;
 $dark-grey: #606060;
 $light-grey: #CDCDCD;
 $pink: #dc635f;
-$dark-pink: #d5256c;
+$dark-pink: #c34a47;
 $blue: #5bc0de;
 $green: #5cb85c;
 
