Change dark theme colour scheme

--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -88,7 +88,7 @@
 .card.dark {
     background-color: $light-black;
     color: white;
-    border-top: 2px solid red;
+    border-top: 2px solid #2727ff;
 
     .tag {
         background-color: red;
