Update light and dark theme colour scheme

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,13 +7,13 @@ $dark-grey: #606060;
 $light-grey: #CDCDCD;
 $pink: #dc635f;
 $dark-pink: #c34a47;
-$blue: #5bc0de;
-$green: #5cb85c;
+$blue: #00D3D3; //#5bc0de;
+$green: #38dd1a; //#5cb85c;
 
 // Dark theme
 $light-black: #242424;
 $dark-black:#101010;
 $smoke: #A9A9A9;
 $dark-red: #a01300;
-$light-blue: #00ebeb;
-$light-green: #3ff61d;
+$light-blue: #00D3D3;
+$light-green: #38dd1a;
