--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -194,11 +194,11 @@ footer .footer-links .link-container a {
 }
 
 .card .demo-link {
-  color: #5cb85c;
+  color: #38dd1a;
 }
 
 .card .repo-link {
-  color: #5bc0de;
+  color: #00D3D3;
 }
 
 .card .demo-link + .repo-link {
@@ -265,11 +265,11 @@ footer .footer-links .link-container a {
 }
 
 .card.dark .repo-link {
-  color: #00ebeb;
+  color: #00D3D3;
 }
 
 .card.dark .demo-link {
-  color: #3ff61d;
+  color: #38dd1a;
 }
 
 .basic-card {
