--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -485,3 +485,12 @@ p, li {
     font-size: 16px;
   }
 }
+
+.slick-slide > div {
+  margin: 0 0.375rem;
+}
+
+.slick-list {
+  margin: 0 -0.375rem;
+  overflow: -moz-hidden-unscrollable;
+}
