--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -70,6 +70,8 @@
 
     @media (max-width: $tablet-breakpoint) {
         width: 90%;
+        margin-left: auto;
+        margin-right: auto;
 
         ul {
             list-style-type: none;
@@ -120,6 +122,8 @@
 
     @media (max-width: $tablet-breakpoint) {
         width: 90%;
+        margin-left: auto;
+        margin-right: auto;
 
         ul {
             list-style-type: none;
