--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -242,6 +242,8 @@ footer .footer-links .link-container a {
 @media (max-width: 960px) {
   .card {
     width: 90%;
+    margin-left: auto;
+    margin-right: auto;
   }
   .card ul {
     list-style-type: none;
@@ -291,6 +293,8 @@ footer .footer-links .link-container a {
 @media (max-width: 960px) {
   .basic-card {
     width: 90%;
+    margin-left: auto;
+    margin-right: auto;
   }
   .basic-card ul {
     list-style-type: none;
