--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -15,7 +15,7 @@
         .card {
             display: grid;
             grid-auto-flow: column;
-            height: 210px;
+            height: 200px;
             grid-template-rows: 1fr 1fr 1fr;
             grid-template-columns: 1fr 5fr;
             padding: 1%;
@@ -82,8 +82,8 @@
     
             .image {
                 display: block;
-                margin: auto;
-                margin-top: 1rem;
+                margin-left: auto;
+                margin-right: auto;
                 max-width: 100%;
                 max-height: 325px;
             }
