Fix image margins

--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -116,6 +116,10 @@
             }
         }
 
+        hr {
+            height: 0.5rem;
+        }
+
         .project-link {
             font-size: 15px;
         }
