Fix dark theme borders

--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -23,6 +23,7 @@
     background-color: $light-black;
     color: white;
     border: 1px solid rgba(55, 55, 55, 0.9);
+    border-top: 2px solid #0275d8;
 }
 
 .card {
