--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -197,6 +197,7 @@ footer .footer-links .link-container a {
   background-color: #242424;
   color: white;
   border: 1px solid rgba(55, 55, 55, 0.9);
+  border-top: 2px solid #0275d8;
 }
 
 .card {
