--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -1,6 +1,6 @@
 .basic-card {
     background-color: $white;
-    padding: 1rem;
+    padding: 16px;
     box-shadow: 0 2px 4px 0 hsla(0, 0%, 0%, 0.2);
     border-top: 2px solid #0275d8;
     transition: transform .2s;
