--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -15,10 +15,8 @@
         .card {
             display: grid;
             grid-auto-flow: column;
-            height: 200px;
-            grid-template-rows: 1fr 1fr 1fr;
-            grid-template-columns: 1fr 5fr;
-            padding-bottom: 2rem;
+            grid-auto-rows: min-content min-content min-content;
+            grid-template-columns: 1.25fr 5fr;
         }
 
         .image-container {
@@ -30,7 +28,6 @@
         .image {
             position: relative;
             top: 10%;
-            height: 100%;
             max-height: 60%;
             margin: auto;
             margin-top: 1rem;
@@ -46,11 +43,6 @@
             grid-row-start: 2;
             grid-column-start: 2;
             height: 100%; 
-
-            ul {
-                padding-left: 2%;
-                padding-right: 2%;
-            }
         }
 
         .tags {
