--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -173,7 +173,7 @@ footer .footer-links .link-container a {
 
 .basic-card {
   background-color: #fff;
-  padding: 16px;
+  padding: 18px;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
   border-top: 2px solid #0275d8;
   transition: transform .2s;
@@ -187,7 +187,7 @@ footer .footer-links .link-container a {
 }
 
 .basic-card ul li + li {
-  margin-top: 0.5rem;
+  margin-top: 0.2rem;
 }
 
 .basic-card.dark {
@@ -202,18 +202,11 @@ footer .footer-links .link-container a {
   transition: background 250ms ease-in-out, border 250ms ease-in-out;
 }
 
-.card hr {
-  height: 0px;
-}
-
-.card .image + hr {
-  height: 0.5rem;
-}
-
 .card .image {
   display: block;
   margin: auto;
-  margin-top: 0.3rem;
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
   max-height: 50vw;
 }
 
@@ -325,7 +318,7 @@ footer .footer-links .link-container a {
     display: grid;
     grid-auto-flow: column;
     grid-auto-rows: min-content min-content min-content;
-    grid-template-columns: 1.25fr 5fr;
+    grid-template-columns: 1.05fr 5fr;
   }
   .single-column .image-container {
     grid-row-start: 1;
