Fix inconsistent image padding

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -23,6 +23,7 @@
             grid-row-start: 1;
             grid-row-end: 4;
             height: 100%;
+            padding-right: 18px;
         }
     
         .image {
