--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -1,4 +1,5 @@
 .basic-card {
+    height: 100%;
     background-color: $white;
     padding: 18px;
     box-shadow: 0 2px 4px 0 hsla(0, 0%, 0%, 0.2);
@@ -96,7 +97,6 @@
     transition: background 250ms ease-in-out, border 250ms ease-in-out;
 
     @media (max-width: $tablet-breakpoint) {
-        width: 88%;
         margin-left: auto;
         margin-right: auto;
 
@@ -110,7 +110,7 @@
     }
 }
 
-.card.dark {
+.card .dark {
     background-color: $light-black;
     color: white;
     border-top: 2px solid #2727ff;
