--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,9 +1,3 @@
-@media (max-width: $tablet-breakpoint) {
-    .card + .card {
-        margin-top: 0.75rem;
-    }
-}
-
 @media (min-width: $tablet-breakpoint) {
     .container {
         margin: auto;
@@ -12,6 +6,8 @@
     }
 
     .single-column {
+        padding: 1%;
+
         .card {
             display: grid;
             grid-auto-flow: column;
@@ -64,6 +60,8 @@
         column-gap: 0.75rem;
         row-gap: 0.75rem;
         grid-row: auto;
+        padding-left: 1%;
+        padding-right: 1%;
 
         .card {
             align-items: center;
