--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -2,11 +2,10 @@
     height: 100%;
     background-color: $white;
     padding: 18px;
-    box-shadow: 0 2px 4px 0 hsla(0, 0%, 0%, 0.2);
-    border-top: 2px solid #0275d8;
     transition: transform .2s;
     position: relative;
-
+    border: 1px solid #e1e4e8;
+    border-radius: 6px;
 
     ul {
         list-style-type: none;
