--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -175,10 +175,10 @@ footer .footer-links .link-container a {
   height: 100%;
   background-color: #fff;
   padding: 18px;
-  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
-  border-top: 2px solid #0275d8;
   transition: transform .2s;
   position: relative;
+  border: 1px solid #e1e4e8;
+  border-radius: 6px;
 }
 
 .basic-card ul {
@@ -302,14 +302,15 @@ footer .footer-links .link-container a {
   color: #38dd1a;
 }
 
+.single-column, .two-column {
+  padding: 1%;
+}
+
 @media (min-width: 1000px) {
   .container {
     margin: auto;
     min-width: 975px;
     max-width: 1000px;
-  }
-  .single-column {
-    padding: 1%;
   }
   .single-column .card {
     display: grid;
@@ -354,8 +355,6 @@ footer .footer-links .link-container a {
     column-gap: 0.75rem;
     row-gap: 0.75rem;
     grid-row: auto;
-    padding-left: 1%;
-    padding-right: 1%;
   }
   .two-column .card {
     align-items: center;
@@ -489,4 +488,5 @@ p, li {
 .slick-list {
   margin: 0 -0.375rem;
   overflow: visible;
+  padding: 1%;
 }
