Increase margins on mobile

--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,10 +1,12 @@
-.single-column, .two-column {
-    padding: 1%;
+@media (max-width: $tablet-breakpoint) {
+    .container {
+        margin-left: 14px;
+        margin-right: 14px;
+    }
 }
 
 @media (min-width: $tablet-breakpoint) {
     .container {
-        margin: auto;
         min-width: 0.975 * $tablet-breakpoint;
         max-width: $tablet-breakpoint;
     }
