--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -205,7 +205,7 @@ footer .footer-links .link-container a {
 
 .card .image {
   display: block;
-  max-height: 70vw;
+  max-height: 55vw;
   margin: -18px -18px 0.75rem -18px;
   border-radius: 6px 6px 0 0;
 }
@@ -301,13 +301,15 @@ footer .footer-links .link-container a {
   color: #38dd1a;
 }
 
-.single-column, .two-column {
-  padding: 1%;
+@media (max-width: 1000px) {
+  .container {
+    margin-left: 14px;
+    margin-right: 14px;
+  }
 }
 
 @media (min-width: 1000px) {
   .container {
-    margin: auto;
     min-width: 975px;
     max-width: 1000px;
   }
