--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,10 +1,12 @@
-.single-column, .two-column {
-    padding: 1%;
+@media (max-width: $tablet-breakpoint) {
+    .container {
+        margin-left: 14px;
+        margin-right: 14px;
+    }
 }
 
 @media (min-width: $tablet-breakpoint) {
     .container {
-        margin: auto;
         min-width: 0.975 * $tablet-breakpoint;
         max-width: $tablet-breakpoint;
     }
@@ -69,14 +71,6 @@
             padding-bottom: 3rem;
             grid-row: auto;
             position: relative;
-    
-            .image {
-                display: block;
-                margin-left: auto;
-                margin-right: auto;
-                max-width: 100%;
-                max-height: 325px;
-            }
 
             .tags {
                 position: absolute;
