--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -203,11 +203,18 @@ footer .footer-links .link-container a {
   transition: background 250ms ease-in-out, border 250ms ease-in-out;
 }
 
-.card .image {
+.card .image-container {
   display: block;
-  max-height: 55vw;
   margin: -18px -18px 0.75rem -18px;
+}
+
+.card .image-container .gatsby-image-wrapper, .card .image-container img {
   border-radius: 6px 6px 0 0;
+}
+
+.card .image-container .vec {
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .card .project-link {
@@ -302,6 +309,13 @@ footer .footer-links .link-container a {
 }
 
 @media (max-width: 1000px) {
+  .non-edgeless-image {
+    margin: 2rem;
+    max-height: 12rem;
+  }
+}
+
+@media (max-width: 1000px) {
   .container {
     margin-left: 14px;
     margin-right: 14px;
@@ -323,14 +337,9 @@ footer .footer-links .link-container a {
     grid-row-start: 1;
     grid-row-end: 4;
     height: 100%;
-    padding-right: 18px;
-  }
-  .single-column .image {
-    position: relative;
-    top: 10%;
-    max-height: 60%;
-    margin: auto;
-    margin-top: 1rem;
+    margin-left: 18px;
+    margin-right: 30px;
+    margin-top: 25%;
   }
   .single-column .description {
     grid-row-start: 1;
